# mcts

./: .gitignore  CMakeLists.txt
scripts/: build_raylib.sh
src/: board.hpp  engine.cpp  engine.hpp  main.cpp  mcts.cpp  mcts.hpp  tree_search.cpp  tree_search.hpp  ui.cpp  ui.hpp  util.hpp
